@@ -9934,10 +9934,15 @@ int processLoggedInPlayer( int inAllowOrForceReconnect,
         
         // a living other player
         
-        if( ! getFemale( otherPlayer ) ) {
+        // consider all men here
+        // and any childless women (they are counted as aunts
+        // for any children born before they themselves have children
+        // or after all their own children die)
+        if( ! getFemale( otherPlayer ) ||
+            countLivingChildren( otherPlayer->id ) == 0 ) {
             
             // check if his mother is an ancestor
-            // (then he's an uncle
+            // (then he's an uncle, or she's a childless aunt)
             if( otherPlayer->parentID > 0 ) {
                 
                 // look at lineage above parent
